// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`risingEdge instruction compiler > compiles the rising edge segment 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    40,
    2,
    0,
    74,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    54,
    2,
    0,
  ],
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": true,
    },
  },
  "memory": {},
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
      "knownIntegerValue": 0,
    },
  ],
}
`;

exports[`risingEdge instruction compiler > compiles the rising edge segment for float operands 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    42,
    2,
    0,
    94,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    56,
    2,
    0,
  ],
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": false,
    },
  },
  "memory": {},
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
      "knownIntegerValue": 0,
    },
  ],
}
`;
